-Created feature to leverage sql from API.
